// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<BulletText /> should match snapshot for custom bullet text 1`] = `
<li
  class="base root 3_mobile_base 3_mobile_base align_stretch root wrapping_noWrap"
>
  <div
    class="base 3_mobile_base 3_mobile_base align_centre"
  >
    <div
      class="base content customBullet"
    >
      <span>
        <i
          class="base display_block"
          role="presentation"
        >
          <svg
            class="base display_block width_full width_full"
            fill="currentColor"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M21 7L9 19l-5.5-5.5 1.414-1.414L9 16.172 19.586 5.586 21 7z"
            />
          </svg>
        </i>
      </span>
    </div>
  </div>
  <div
    class="base 3_mobile_base 3_mobile_base"
  >
    <div
      class="base content"
    >
      <span
        class="base textAlign_left root_base sizes_4_base colours_neutral_base fontWeight_normal_base base"
      >
        Hello World
      </span>
    </div>
  </div>
</li>
`;

exports[`<BulletText /> should match snapshot for default bullet text 1`] = `
<li
  class="base root 3_mobile_base 3_mobile_base align_stretch root wrapping_noWrap"
>
  <div
    class="base 3_mobile_base 3_mobile_base align_centre"
  >
    <div
      class="base content"
    >
      <div
        class="base pill_mobile_base bullet_base variant_primary_base"
      >
        <span
          class="bulletText_base"
        >
          •
        </span>
      </div>
    </div>
  </div>
  <div
    class="base 3_mobile_base 3_mobile_base"
  >
    <div
      class="base content"
    >
      <span
        class="base textAlign_left root_base sizes_4_base colours_neutral_base fontWeight_normal_base base"
      >
        Hello World!
      </span>
    </div>
  </div>
</li>
`;

exports[`<BulletText /> should match snapshot for ordered bullet text 1`] = `
<li
  class="base root 3_mobile_base 3_mobile_base align_stretch root wrapping_noWrap"
>
  <div
    class="base 3_mobile_base 3_mobile_base align_centre"
  >
    <div
      class="base content"
    >
      <div
        class="base pill_mobile_base bullet_base variant_primary_base"
      >
        <span
          class="bulletText_base"
        >
          ?
        </span>
      </div>
    </div>
  </div>
  <div
    class="base 3_mobile_base 3_mobile_base"
  >
    <div
      class="base content"
    >
      <span
        class="base textAlign_left root_base sizes_4_base colours_neutral_base fontWeight_normal_base base"
      >
        Hello World!
      </span>
    </div>
  </div>
</li>
`;

exports[`<BulletText /> should match snapshot for primary bullet text with custom bullet character 1`] = `
<li
  class="base root 3_mobile_base 3_mobile_base align_stretch root wrapping_noWrap"
>
  <div
    class="base 3_mobile_base 3_mobile_base align_centre"
  >
    <div
      class="base content"
    >
      <div
        class="base pill_mobile_base bullet_base variant_primary_base"
      >
        <span
          class="bulletText_base"
        >
          ?
        </span>
      </div>
    </div>
  </div>
  <div
    class="base 3_mobile_base 3_mobile_base"
  >
    <div
      class="base content"
    >
      <span
        class="base textAlign_left root_base sizes_4_base colours_neutral_base fontWeight_normal_base base"
      >
        Hello World!
      </span>
    </div>
  </div>
</li>
`;

exports[`<BulletText /> should match snapshot for secondary bullet text with custom bullet character 1`] = `
<li
  class="base root 3_mobile_base 3_mobile_base align_stretch root wrapping_noWrap"
>
  <div
    class="base 3_mobile_base 3_mobile_base align_centre"
  >
    <div
      class="base content"
    >
      <div
        class="base pill_mobile_base bullet_base variant_secondary_base"
      >
        <span
          class="bulletText_base"
        >
          ?
        </span>
      </div>
    </div>
  </div>
  <div
    class="base 3_mobile_base 3_mobile_base"
  >
    <div
      class="base content"
    >
      <span
        class="base textAlign_left root_base sizes_4_base colours_neutral_base fontWeight_normal_base base"
      >
        Hello World!
      </span>
    </div>
  </div>
</li>
`;
